--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.4",
+    "ajv": "^8.17.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "lucide-react": "^0.475.0",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-canvas-draw": "^1.2.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-idle-timer": "^5.7.2",
-    "react-router-dom": "^7.1.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
