--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "lucide-react": "^0.475.0",
-    "react": "^18.2.0",
+    "react": "^19.1.0",
     "react-canvas-draw": "^1.2.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-idle-timer": "^5.7.2",
     "react-router-dom": "^6.14.2",
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm install --legacy-peer-deps"
   },
   "eslintConfig": {
     "extends": [
