--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuid": "^11.0.5",
     "validator": "^13.12.0",
     "webpack": "^5.98.0",
+    "web-vitals": "^3.3.1", 
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
